# follow-me-robot

./: .gitignore  README.md  build-firmware.sh  compile.bash  compile.sh  compile.zsh  minimum-setup.sh  setup-microros.sh  setup-nvidia.bash  setup-ros2.sh
.setup/: git_config  gz-harmonic  open_vscode  ros_add_source  ros_init  ros_install  ros_install_packages
.setup/func/: func.bash  func.sh  func.zsh
src/follow_me_joystick/: CMakeLists.txt  package.xml
src/follow_me_joystick/config/: joy_config.yaml
src/follow_me_joystick/include/follow_me_joystick/: mecanum_joystick.hpp
src/follow_me_joystick/launch/: joystick.launch.py
src/follow_me_joystick/src/: mecanum_joystick.cpp  node_main.cpp
src/follow_me_robot/: CMakeLists.txt  package.xml
src/follow_me_robot/config/: apritag.yaml  follow_me_mapper_lds_2d.lua  nav2_params.yaml  teleop_config.yaml
src/follow_me_robot/launch/: foxglove.launch.py  gazebo.launch.py  nav.launch.py  robot-foxglove.launch.py  robot-gazebo.launch.py  robot-rviz.launch.py  robot-tag-detection.launch.py  robot.launch.py  sensor.launch.py  state.launch.py
src/follow_me_robot/rviz/: model.rviz
src/follow_me_robot/urdf/: robot.urdf.xacro  simple-bot.urdf.xacro  world_base.urdf.xacro
src/follow_me_robot/urdf/core/: follow_me_robot.gazebo.xacro  inertial.urdf.xacro  material.xacro  omni_wheel.urdf.xacro  robot_body.urdf.xacro
src/follow_me_robot/urdf/sensors/: cam.xml  camera.xacro  camera_depth.xacro  gps.xacro  imu.xacro  kinect.xml  lidar.xacro  reciver.xacro  sonar.xacro  stereo_camera.xml
src/follow_me_robot/urdf/sensors/gazebo/: cam.gazebo  gps.gazebo  imu.gazebo  lidar.gazebo  macros.xacro  readme.md  sonar.gazebo
src/follow_me_teleop/: CMakeLists.txt  package.xml
src/follow_me_teleop/config/: teleop_config.yaml
src/follow_me_teleop/include/follow_me_teleop/: axis_configuration.hpp  mecanum_teleop.hpp
src/follow_me_teleop/include/followme_teleop/: mecanum_joystick.hpp  mecanum_teleop.hpp
src/follow_me_teleop/launch/: teleop.launch.py
src/follow_me_teleop/src/: axis_configuration.cpp  mecanum_teleop.cpp  node_main.cpp
src/followme_robot_model/: CMakeLists.txt  package.xml
src/followme_robot_model/launch/: robot-gazebo.launch.py  robot-rviz.launch.py  robot.launch.py
src/followme_robot_model/meshes/body/: robot_body.dae
src/followme_robot_model/robot/: robot.urdf.xacro
src/followme_robot_model/rviz/: model.rviz
src/followme_robot_model/urdf/: followme_robot_model.gazebo.xacro  material.xacro
src/followme_robot_model/urdf/body/: robot_body.urdf.xacro
src/followme_robot_model/urdf/physics/: inertial.urdf.xacro
src/followme_robot_model/urdf/sensor/: camera_depth.xacro
src/followme_robot_model/urdf/sensors/: cam.xml  camera.xacro  camera_depth.xacro  gps.xml  imu.xacro  kinect.xml  lidar.xacro  reciver.xacro  sensors.xacro  sonar.xacro  stereo_camera.xml
src/followme_robot_model/urdf/sensors/gazebo/: gps.gazebo
src/followme_robot_model/urdf/wheel/: omni_wheel.urdf.xacro
src/followme_teleop/: CMakeLists.txt  package.xml
src/followme_teleop/config/: teleop_config.yaml
src/followme_teleop/include/followme_teleop/: mecanum_joystick.hpp  mecanum_teleop.hpp
src/followme_teleop/launch/: teleop.launch.py
src/followme_teleop/src/: mecanum_joystick.cpp  mecanum_teleop.cpp  node_main.cpp
src/gazebo_model/actor/: model.sdf
src/gazebo_model/april_tag0/: model.config  model.sdf
src/gazebo_model/april_tag0/meshes/: apriltag0.mtl
src/gazebo_model/april_tag1/: model.config  model.sdf
src/gazebo_model/april_tag2/: model.config  model.sdf
src/gazebo_model/april_tag3/: model.config  model.sdf
src/gazebo_model/april_tag3/meshes/: apriltag.mtl
src/motor_controller/: readcontrolerinput.py
src/motor_controller/Code_Mecanum_Wheels_BT/: Code_Mecanum_Wheels_BT.ino
src/motor_controller/Mecanum_Wheel_Controller/: InvertedAccelStepper.h  Mecanum_Wheel_Controller.ino
src/motor_controller/Mecanum_Wheels_Axis/: Mecanum_Wheels_Axis.ino
src/motor_controller/controller/: readcontrolerinput.py  serialmonitor.py  xboxcontroller.py
src/navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/navigation/navigation/: keyboard_teleop.py  motor_controller.py  movement_simulator.py
src/navigation/src/: simple_navigation.cpp
src/robot_model/: CMakeLists.txt  package.xml
src/robot_model/launch/: robot-gazebo.launch.py  robot-rviz.launch.py  robot.launch.py
src/robot_model/robot/: robot.urdf.xacro
src/robot_model/urdf/: material.xacro  robot_model.gazebo.xacro
src/robot_model/urdf/body/: robot_body.urdf.xacro
src/robot_model/urdf/sensors/: lidar.xacro  sensors.xacro
src/robot_model/urdf/wheel/: omni_wheel.urdf.xacro
src/simple_navigation/: CMakeLists.txt  package.xml
src/simple_navigation/src/: node_main.cpp
