<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_me_robot</name>
  <version>0.0.0</version>
  <description>The follow_me_robot package. See https://github.com/WildWolfWuff/follow-me-robot for more information.</description>
  <maintainer email="dev@todo.todo">dev</maintainer>
  <license>TODO: License declaration</license>
  <author email="hummelm.tin21@student.dhbw-heidenheim.de">Marc Hummel</author>
  <author email="seiffertt.tin21@student.dhbw-heidenheim.de">Tobias Seiffert</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>v4l2-camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
